# BitCrush

./: CMakeLists.txt  main.cpp
engine/src/core/: Application.cpp  Application.h  Types.h  Window.cpp  Window.h
engine/src/utility/: Types.h
